02_pacman-mongo-apps.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  namespace: pacman
  labels:
    app: pacman
  name: mongodb 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pacman
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pacman
    spec:
      serviceAccount: pacman
      serviceAccountName: pacman
      volumes:
      - name: mongodb-data
        emptyDir: {}
      containers:
      - name: mongodb-pacman
        image: centos/mongodb-36-centos7
        ports:
        - containerPort: 27017
          protocol: TCP
        readinessProbe:
          exec:
           command:
            - /bin/sh
            - -i
            - -c
            - mongo 127.0.0.1:27017/$MONGODB_DATABASE -u $MONGODB_USER -p $MONGODB_PASSWORD
              --eval="quit()"
        volumeMounts:
        - mountPath: /var/lib/mongodb/data
          name: mongodb-data
        resources: {}
status: {}
