04_pacman-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: pacman
  name: pacman
  namespace: pacman
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: pacman
  sessionAffinity: None
  type: LoadBalancer
