05-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pacman
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: pacman
